flask app works (albeit badly) and can provide wiki intros to top words

--- a/FlaskApp/templates/documentInfo.html
+++ b/FlaskApp/templates/documentInfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<title>WTF am I reading?</title>
+	<title>clarefy</title>
 
 	
 	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
