--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<title>WTF am I reading?</title>
+	<title>clarefy</title>
 
 	
 	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 	<div class="container">
 		<div class="header">
 
-		<h3 class="text-muted">WTF am I reading?</h3>
+		<h3 class="text-muted">clarefy</h3>
 		</div>
 
 		<div class="jumbotron">
@@ -31,13 +31,13 @@
 		<input type="name" name="inputName" id="inputName" class="form-control" placeholder="Enter a document identifier (e.g. arXiv link, DOI...)" required autofocus>
 		
 		<a href="signUp"
-        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">WTF am I reading?</button>
+        <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">clarefy</button>
         </a>
 		<!---
 		<form class="form-signin">
 		<label for="inputDocumentInfo" class="sr-only">Name</label>
 		<input type="documentInfo" name="inputDocumentInfo" id="inputDocumentInfo" class="form-control" placeholder="OLDER VERSION Enter a document identifier (e.g. arXiv link, DOI...)" required autofocus>
-		<a class="btn btn-lg btn-primary btn-block" href="submitDocument" role="button">WTF am I reading?</a>
+		<a class="btn btn-lg btn-primary btn-block" href="submitDocument" role="button">clarefy</a>
 		-->
 
 		</div>
